Fix bug 214874.  Script should not execute while innerHTML is being set. r+sr=jst, a=dveditz